--- a/htmlfiles/2.html
+++ b/htmlfiles/2.html
@@ -2,13 +2,7 @@
 <html>
 <body>
 
-<h2>Unordered List with Disc Bullets</h2>
-
-<ul style="list-style-type:disc">
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>  
+<h2>Test 2</h2>
 
 </body>
 </html>
